<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/str_nav_home" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_nav_collection"
        android:title="@string/str_nav_collection" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/str_nav_search" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/str_nav_notification" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_nav_user"
        android:title="@string/str_nav_account" />
</menu>
